--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "git-push": "git push origin gh-pages --force && git checkout master",
     "deploy": "npm run build && npm run git-commit && npm run git-push"
   },
-  "author": "",
+  "author": "Craig OConnor",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/CraigglesO/peer-tracker.git"
   },
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0"
+  },
+  "dependencies": {
+    "bittorrent-peerid": "^1.1.1",
+    "compact2string": "^1.4.0",
+    "mongoose": "^4.7.6",
+    "string2compact": "^1.2.2",
+    "ws": "^1.1.1"
   }
 }
