small server fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,26 @@
-server {
-    listen 80;
+worker_processes 4;
 
-    server_name connor-craig.us;
+events { worker_connections 1024; }
 
-    location / {
-        proxy_pass http://APP_PRIVATE_IP_ADDRESS:1337;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+http {
+
+        upstream node-app {
+              least_conn;
+              server node1:1336 weight=10 max_fails=3 fail_timeout=30s;
+              server node2:1336 weight=10 max_fails=3 fail_timeout=30s;
+              server node3:1336 weight=10 max_fails=3 fail_timeout=30s;
+        }
+
+        server {
+              listen 80;
+
+              location / {
+                proxy_pass http://peertracker;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+              }
+        }
 }
