--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
+    "readuint64be": "^1.0.4",
     "redis": "^2.6.3",
     "response-time": "^2.3.2",
     "string2compact": "^1.2.2",
