--- a/node/package.json
+++ b/node/package.json
@@ -2,10 +2,10 @@
   "name": "peer-tracker",
   "version": "0.3.0",
   "description": "Lightweight BitTorrent Tracker Client & Server Implementation",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/readuint64be",
-    "start": "node server.js",
+    "start": "node index.js",
     "build": "...",
     "git-commit": "git add -A . && git commit -a -m 'gh-pages update'",
     "git-push": "git push origin gh-pages --force && git checkout master",
@@ -27,9 +27,10 @@
     "bittorrent-peerid": "^1.1.1",
     "compact2string": "^1.4.0",
     "express": "^4.14.0",
+    "geoip-native-lite": "^0.2.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
-    "readuint64be": "^1.0.4",
+    "readuint64be": "^1.0.5",
     "redis": "^2.6.3",
     "response-time": "^2.3.2",
     "string2compact": "^1.2.2",
