--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "bencode": "^0.11.0",
     "bittorrent-peerid": "^1.1.1",
     "compact2string": "^1.4.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-ws": "^2.0.0",
     "geoip-native-lite": "^0.2.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.7.6",
