--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peer-tracker",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Lightweight BitTorrent Tracker Client & Server Implementation",
   "main": "./out/peer-tracker.js",
   "scripts": {
@@ -17,8 +17,8 @@
     "build+test": "npm run build && npm run all-tests",
     "lint+build+test": "npm run lint && npm run build+test",
     "prepublish": "typings install",
-    "server": "./node_modules/.bin/ts-node ./peer-tracker-server.ts",
-    "client": "./node_modules/.bin/ts-node ./peer-tracker-client.ts"
+    "server": "DEBUG=\"PeerTracker:Server\" ./node_modules/.bin/ts-node ./peer-tracker-server.ts",
+    "client": "DEBUG=\"PeerTracker:Client\" ./node_modules/.bin/ts-node ./peer-tracker-client.ts"
   },
   "author": "Craig OConnor",
   "repository": {
